Tests/Error/Multilingual/.build/catcharabic.pr
{
  "name": "CatchArabic",
  "description": "Sets %caughtArabic% to true (null comparison noted in step text).",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %caughtArabic% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%caughtArabic%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": [
            {
              "name": "asdefault",
              "value": false,
              "type": "bool"
            }
          ],
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/CatchArabic.goal",
  "prPath": "/.build/catcharabic.pr",
  "hash": "64dc901c857473f38e7ff10967d149b8f277a68d993a14db776d641cbd649e86",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}